--- a/styles/style.css
+++ b/styles/style.css
@@ -119,10 +119,10 @@ body {
 }
 
 .download-content > .download > .app-download:nth-child(1) {
-    background-image: url(/img/apple-button.png);
+    background-image: url(../img/apple-button.png);
 }
 .download-content > .download > .app-download:nth-child(2) {
-    background-image: url(/img/googleplay-button.png);
+    background-image: url(../img/googleplay-button.png);
 }
 
 footer {
